Added some methods section to manu

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -37,35 +37,37 @@ Others}
 \begin{linenumbers}
 
 \begin{abstract} 
-Mixed fisheries have resulted in overexploitation of weaker stock as over-quota
-catches continue in fisheries pursuing available quota of healthy stocks. As EU
-fisheries management moves to a system where all fish caught are counted
-against the quota (the 'Landings obligation'), from 2019 the challenge will be
-to maximise catches within the new constraints. Failing to achieve this will
-result in lower productivity as quota for healthier stocks remains uncaught in
-order to protect the weaker stocks. Consequently decoupling exploitation of
-species caught together in mixed fisheries has become an important goal for
-fisheries sustainability. A potential mechanism for decoupling exploitation is
-spatial targeting (driven by spatial management or rights-based incentives),
-but this remains technically challenging due to complex fishery dynamics, the
-co-occurrence of species at fine spatial and temporal scales and a lack of
-understanding of how this is driven by community dynamics.  We set out a
-framework to understand how community and fishery spatial dynamics interact to
-drive species composition in catch by applying to the highly mixed fisheries of
-the Celtic Sea a spatio-temporal joint species distribution model (VAST). The
-model is applied to the nine most important demersal quota species, each
-separated into juvenile and adult size classes to highlight where challenges in
-implementing the landings obligation persist.  \\
+Mixed fisheries have resulted in overexploitation of weaker stocks as
+over-quota catches continue in fisheries pursuing available quota of healthy
+stocks. As EU fisheries management moves to a system where all fish caught are
+counted against the quota (the 'Landings obligation'), from 2019 the challenge
+will be to maximise catches within the new constraints. Failure to achieve this
+will result in lower productivity as quota for healthier stocks remains
+uncaught in order to protect the weaker stocks. Consequently decoupling
+exploitation of species caught together in mixed fisheries has become an
+important goal for fisheries sustainability. A potential mechanism for
+decoupling exploitation is spatial targeting (driven by spatial management or
+rights-based incentives), but this remains technically challenging due to
+complex fishery dynamics, the co-occurrence of species at fine spatial and
+temporal scales and a lack of understanding of how this is driven by community
+dynamics.  We set out a framework to understand how spatial community and
+fishery dynamics interact to determine species composition in catch. We do so
+by applying a spatio-temporal joint species distribution model, VAST, to
+characterise the highly mixed fisheries of the Celtic Sea where numerous target
+and bycatch species are landed as part of a diverse catch. \\
 
 Clear common drivers for spatial distribution patterns emerge for three species
-groups (roundfish flatfish and shelf species) and, while abundance varies from
-year to year, the same species groups are commonly found in higher densities
-together. This indicates common drivers of distribution and the scale of the
-challenge in separating catches within the species-groups using spatial
-management measures, having important implications for management of the mixed
-fisheries under the EU landings obligation.
+groups commonly targeted (roundfish flatfish and shelf species) and, while
+abundance varies from year to year, the same species groups are commonly found
+in higher densities together. More subtle differences in distribution can be
+found within a species group, which can be used to adjust catch to species
+composition, where practical. This indicates common drivers of distribution for
+groups of species and highlights the scale of the challenge in separating
+catches within the species-groups using spatial management measures, having
+important implications for management of the mixed fisheries under the EU
+landings obligation.
 
-[285 words]
+[304 words]
 
 \end{abstract}
 
@@ -118,25 +120,25 @@ introducing escapement panels in nets), or the timing and location of fishing
 activity \cite{Fulton2011b, vanPutten2012a}.
 
 Spatio-temporal management measures (such as time-limited fishery closures)
-have been applied in the past to reduce unwanted catch with varying degrees of
-success (e.g. \cite{Needle2011, Holmes2011, Beare2010, Dinmore2003}) while
-move-on rules have also been proposed or implemented to influence catch rates
-of particular vulnerable species in order to reduce or eliminate discards
+have been applied in the past to reduce unwanted catch through changes in
+spatial fishing patterns with varying degrees of success (e.g.
+\cite{Needle2011, Holmes2011, Beare2010, Dinmore2003}) while move-on rules have
+also been proposed or implemented to influence catch rates of particular
+vulnerable species in order to reduce or eliminate discards
 (e.g.\cite{Gardner2008, Dunn2011, Dunn2014a}). However, such measures have
 generally been targeted at individual species without considering associations
 and interactions among several species. Highly mixed fisheries are complex with
-spatial, technological and community interactions. The design of
+spatial, technological and community interactions combining. The design of
 spatio-temporal management measures which aim to allow exploitation of healthy
 stocks while protecting weaker stocks requires understanding of these
-interactions on a meaningful scale for management measures. Here, we set out a
+interactions on a meaningful scale to managers and fishers. Here, we set out a
 framework for understanding these complexities. We do this by implementing a
-spatio-temporal method for reducing the dimensionality of the problem and use
-the framework to identify trends common among species groups to describe where
-spatial measures can contribute to mitigating unwanted catches in the Celtic
-Sea mixed fisheries.
- 
+spatio-temporal dimension reduction method and use the results to draw
+inference and create a framework to identify trends common among species groups
+to describe where spatial measures can contribute to mitigating unwanted
+catches in the Celtic Sea mixed fisheries.
 
-[577 words]
+[589 words]
 
 \subsection{Framework for analysing spatio-temporal mixed fisheries
 	interactions}
@@ -147,22 +149,22 @@ independent survey data to characterise the spatio-temporal dynamics of key
 components of a fish community by employing a geostatistical Vector
 Autoregressive Spatio-temporal model (VAST). VAST includes i) a factor analysis
 decomposition to describe trends in spatio-temporal dynamics of the different
-species as a function of \textit{n} latent variables\cite{Thorson2015}. This
+species as a function of \textit{n} latent variables\cite{Thorson2015} to
+identify community dynamics and drivers common among species groups. This
 allows for inference of the distribution and density of poorly sampled species
-through association with the modelled factors and identification of community
-dynamics and drivers common among species groups. In addition, it ii)
-separately models spatio-temporal encounter probability and catch rates to
-allow identification of differences in associations for distribution of the
-species groups and densities upon encounter \cite{Thorson2015a}, it employs iii)
-Gaussian Markov Random Fields (GMRFs) to capture spatial and temporal
-correlations within and among species groups for both encounter probability and
-catch rates \cite{Thorson2013}, and iv) the approach is set in a mixed
-modelling framework to allow estimation of fixed effects to account for
-systematic differences driving encounter and catches, such as survey catch rate
-differences, while integrating across random effects which capture the
-spatio-temporal properties of the fish community.
+through association with the modelled factors. In addition, VAST ii) separately
+models spatio-temporal encounter probability and catch rates to allow
+identification of differences in associations for distribution of the species
+groups and densities upon encounter \cite{Thorson2015a}, employs iii) Gaussian
+Markov Random Fields (GMRFs) to capture spatial and temporal correlations
+within and among species groups for both encounter probability and catch rates
+\cite{Thorson2013}, and iv) is set in a mixed modelling framework to allow
+estimation of fixed effects to account for systematic differences driving
+encounter and catches, such as survey catch rate differences, while integrating
+across random effects which capture the spatio-temporal properties of the fish
+community.
 
-[203 words]
+[200 words]
 
 \subsection{Dynamics of Celtic Sea fisheries}
 
@@ -195,12 +197,12 @@ catches of quota species under the EU's landings obligation.
 
 [223 words]
 
-\subsection{Common spatial patterns driving species associations}
-A spatial dynamic factor analysis decomposes the dominant spatial patterns
-driving differences in encounter probability and abundance. Figure 1 shows the
-first three factors for (a) average spatial encounter probability and (b)
-average density. The first three factors account of 83.4 \% of the variance in
-encounter probability and 69.2 \% of the variance in density, respectively. A
+\subsection{Common spatial patterns driving species associations} A spatial
+dynamic factor analysis decomposes the dominant spatial patterns driving
+differences in encounter probability and abundance. Figure 1 shows the first
+three factors for (a) average spatial encounter probability and (b) average
+density. The first three factors account of 83.7 \% of the variance in
+encounter probability and 69 \% of the variance in density, respectively. A
 clear spatial pattern can been seen both for encounter probability and density,
 with a positive association with the first factor in the inshore North Easterly
 part of the Celtic Sea into the Bristol Channel and Western English Channel,
@@ -307,8 +309,8 @@ by temporally changing environmental factors.]]
 [459 words]
 
 
-\subsection{Implications for species avoidance in mixed fisheries under the
-	landings obligation} 
+\subsection{Subtle differences in distributions may be important to separate
+	catches within groups under the landing obligation} 
 The analysis shows the interdependence within species groups (roundfish,
 flatfish and deeper water species) which has important implications for how
 spatial avoidance can be used to support implementation of the EU's landings
@@ -328,9 +330,9 @@ haddock while cod had more westerly distribution than whiting roughly
 delineated by the 7$^{\circ}$ W line. Whiting appeared particularly
 concentrated in an area between 51 and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$
 W, which can be seen by comparing the whiting distribution with both cod
-(Figure 4b) and haddock (Figure 4c). For the deeper water species Figures 4d and 4e
-indicate that hake are particularly concentrated in two areas compared to
-anglerfishes\footnote{two species combined as they are managed as one} and
+(Figure 4b) and haddock (Figure 4c). For the deeper water species Figures 4d
+and 4e indicate that hake are particularly concentrated in two areas compared
+to anglerfishes\footnote{two species combined as they are managed as one} and
 megrim (though for megrim, a fairly even relative distribution elsewhere is
 indicated by the large amount of white space). For anglerfishes and megrim
 (Figure 4f), anglerfishes have a more easterly distribution than megrim. For
@@ -355,7 +357,7 @@ catching a greater share of hake and the Beam trawl a greater proportion of
 megrim. Megrim dominates the catch for both gears in area 216, reflecting its
 relative abundance in the area.
 
-Figure 5 shows the joint production function for the entire spatial domain,
+[[Figure 5 shows the joint production function for the entire spatial domain,
 giving the global production sets for the years 2011 - 2015. It gives the space
 in which vessels have to operate where they can change the relative composition
 of each species in the catch as a function of changing location fished only.
@@ -365,12 +367,17 @@ each other\cite{Reimer2017}. As can be seen from Figure 5a which shows the
 trade-off between cod and haddock for an Otter trawler....
 
 Figure 5b shows the same for plaice and sole for a Beam trawler...
-STRUGGLING TO DEFINE WHAT IS 'LOTS' AND WHAT IS 'LITTLE' SPACE OBJECTIVELY...?
+STRUGGLING TO DEFINE WHAT IS 'LOTS' AND WHAT IS 'LITTLE' SPACE
+OBJECTIVELY...?]]
 
-[573 words]
+[489 words]
 
-\subsection{Implications for mixed fishery management under the EU landing
-	obligation}
+\subsection{Application of framework to support implementation landing
+	obligation in mixed fisheries}
+The framework described and applied here to the Celtic Sea identifies three
+species groups that show spatial separation. Within groups spatial separation
+is more challenging which has important implications for how the EU's landings
+obligation is implemented.
 
 
 Real time?  Commercial data ?  Hotspots \& Notspots ??
@@ -380,12 +387,118 @@ balance of catch in mixed fisheries to maintain productivity. FOOD SECURITY!!
 
 \section*{Methods}
 
+\subsection{Model structure:} 
 
+VAST (\url{www.github.com/james-thorson/VAST}) implements a delta-generalised
+linear mixed modelling (GLMM) framework that takes account of spatio-temporal
+correlations among species / size classes through implementation of a spatial
+dynamic factor analysis.  Spatio-temporal variation is represented through a
+three-dimensional Gaussian Random Field, based on a user-constructed mesh. 
+
+\textbf{\textit{SDFA:}} Associations among species / species-groups are
+modelled using developments in JDSDMs \cite{Thorson2017}. This involves
+implementing a factor analysis decomposition to define a function for each
+factor that returns a positive or negative association of one or more species
+with any location. Thus log-density of any species can then be described as a
+linear combination of factors:
+	\begin{equation}
+		\theta_{p}(s,t) = \sum_{j=1}^{n_{j}}
+		L_{p,j}\psi_{j}(s,t) +\sum_{k=1}^{n_{k}}
+		\gamma_{k,p}\chi_{k}(s,t)
+	\end{equation}
+Where $\theta_{p}(s,t)$ represents log-density for species $p$ at site $s$ at
+time $t$, $\psi_{j}$ is factor $j$, $L_{p,j}$ the loading matrix representing
+association of species $p$ with factor $j$ and $\gamma_{k,p}\chi_{k}(s,t)$ the
+linear effect of covariates at each site and time \cite{Thorson2016b}. 
+
+The factor analysis can identify community dynamics and where species have
+similar spatio-temporal patterns, allowing inference of species distributions
+and abundance of poorly sampled species through association with other species
+and allows for computation of spatio-temporal correlations among species-groups
+\cite{Thorson2016b}.
+
+\textbf{\textit{Estimation of abundances:}} Spatio-temporal encounter
+probability and positive catch rates are modelled separately with
+spatio-temporal encounter probability modelled using a logit-link linear
+predictor;
+		\begin{equation}
+			logit[p(s_{i},p_{i},t_{i})] = \gamma_{p}(p_{i},t_{i}) +
+			\varepsilon_{p}(s_{i},p_{i},t_{i}) + \delta_{p}(p_{i},
+			v_{i})
+		\end{equation}
+
+and positive catch rates modelling using a gamma- distribution \cite{Thorson2015a}.  
+		\begin{equation}
+			gamma[r(s_{i},p_{i},t_{i})] = \gamma_{p}(p_{i},t_{i}) +
+			\varepsilon_{p}(s_{i},p_{i},t_{i}) + \delta_{p}(p_{i},
+			v_{i})
+		\end{equation}
+
+With $\gamma_{*}(p_{i},t_{i})$, $\varepsilon_{*}(s_{i},p_{i},t_{i})$ and
+$\delta_{*}(p_{i}, v_{i})$ representing an intercept, spatio-temporal variation
+and a vessel effect ($v$) respectively for for either probability of encounter,
+$p$ or density $r$.
+
+\textbf{\textit{Spatio-temporal variation:}} The spatio-temporal variation is
+modelled using a Gaussian Markov Random Field (GMRF) where catch data in nearby
+locations can be correlated, allowing inference about poorly sampled locations.
+A probability distribution for spatio-temporal variation in both encounter
+probability and positive catch rate is specified, $\varepsilon_{*}(s,p,t)$,
+with a three-dimensional multivariate normal distribution so that:
+	\begin{equation}
+		vec[\mathbf{E}_{*}(t)] \sim MVN(0,\mathbf{R}_{*} \otimes
+		\mathbf{V}_{{\varepsilon}{*}})
+	\end{equation}
+
+Here, $vec[\mathbf{E}_{*}(t)]$ is the stacked columns of the matrices
+describing $\varepsilon{*}(s,p,t)$ at every location, species and time,
+$\mathbf{R}_{*}$ is a correlation matrix for encounter probability or positive
+catch rates among locations and $\mathbf{V}_{*}$ a correlation matrix for
+encounter probability or positive catch rate among species (modelled within the
+factor analysis). $\otimes$ represents the Kronecker product so that the
+correlation among any location and species can be computed \cite{Thorson2017}.
+		
+Correlations are estimated based on a Matérn covariance function where
+correlation decays smoothly over space/time the further from the location
+sample. This may include geometric anisotropy to reflect the fact that
+correlations may decline in one direction faster than another (e.g. moving
+offshore) \cite{Thorson2013}.
+
+\textbf{\textit{Incorporating covariates}} A factor analysis can also be
+undertaken to incorporate covariance of vessels as a random effect, or as done
+here, vessel catchability can be estimated as a fixed effect $\delta_{s}(v)$
+\cite{Thorson2014}. Fixed covariates for habitat quality or other predictors of
+encounter probability / density can be incorporated to improve the spatial
+predictive performance \cite{Thorson2017}.
+
+\textbf{\textit{Parameter estimation}} Parameter estimation is undertaken
+through Laplace approximation of the marginal likelihood for fixed effects
+while integrating the joint likelihood (which includes the probability of the
+random effects) with respect to random effects, using Template Model Builder
+(TMB; \cite{Kristensen2015}). Computation was done with support of the Irish
+Centre for High End Computing (ICHEC; \url{https://www.ichec.ie}) facility.  \\
+
+
+\subsection{Data}
 
 The model integrates data from seven fisheries independent surveys taking
 account of correlations among species-group spatio-temporal distributions and
 abundances to predict spatial density estimates consistent with the resolution
 of the data. 
+
+The model has been fit to nine species separated into adult and juvenile size
+classes (Table S2) to seven survey series (Table S1) in the Celtic Sea bound by
+48$^{\circ}$ N to 52 $^{\circ}$ N latitude and 12 $^{\circ}$ W to 2$^{\circ}$ W
+longitude (Figure S9) for the years 1990 - 2015 inclusive.  Application has
+been on a \textit{geographical basis} (i.e.  encompassing more than a single
+stock for some species). However, indices for stock boundaries could be derived
+from the spatial density estimates. \\
+
+
+\subsection{Model setup}
+
+\subsection{Model validation}
+
 
 [[Model outputs are consistent with stock-level trends abundances over time
 from international assessments, yet also provide detailed insight into species
@@ -393,9 +506,9 @@ co-occurrence and the strength of associations in space and time.  We use the
 outputs to draw inference on the challenges in separating catches of key
 commercial demersal fish in moving to the EU landing obligation.]]
 
+[words: 732]
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{linenumbers}
 \newpage
 \Urlmuskip=0mu plus 1mu\relax
