--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -127,8 +127,19 @@
 
 \begin{figure}[!ht]
 \begin{center}
-	\includegraphics[width = 0.9\linewidth]{"figures/Suppl - QEstimatesALL"}
+	\includegraphics[width = 0.9\linewidth]{"figures/AreaMap"}
 	\label{fig:S9}
+	\caption{Spatial bounds of case study area}
+	\end{center}
+\end{figure}
+
+
+
+
+\begin{figure}[!ht]
+\begin{center}
+	\includegraphics[width = 0.9\linewidth]{"figures/Suppl - QEstimatesALL"}
+	\label{fig:S10}
 	\caption{Fixed effect estimates for surveys for each species-group. Note
 	all values within a species-group are relative to the CEXP survey}
 	\end{center}
